Changed to Knee Bar, nav across all pages

--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
     <!-- My css-->
     <link rel="stylesheet" href="css/styles.css">
 
-    <title>Amanda Gallant Art</title>
+    <title>The KneeBar</title>
 </head>
 
 <body>
     <header class="jumbotron jumbotron-fluid">
         <div class="container">
             <div class="row">
-                <div class="col-6">
-                    <h1>Amanda Gallant Art</h1>
-                    <h3>Fine art for fine people</h3>
+                <div class="col">
+                    <h1>The KneeBar</h1>
+                    <h3 class="ml-5">Only the best beta</h3>
                 </div>
             </div>
         </div>
@@ -42,13 +42,13 @@
                         <a class="nav-link" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="portfolio.html">Portfolio</a>
+                        <a class="nav-link" href="crags.html">Local Crags</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link"href="contactUs.html">Contact Us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link"href="aboutUs.html">About the Artist</a>
+                        <a class="nav-link"href="aboutUs.html">About Us</a>
                     </li>
                 </ul>
             </div>
@@ -56,10 +56,35 @@
     </nav>
     
     <!-- ***************This will be the middle portion of the site, some pictures, probably in carousel Format, brief description of services -->
-    <div>
-        <img src="" alt="Nothing here yet">
-
-        <p>Info about Amanda's talents and experieces</p>
+    <div class="container p-2">
+        <div class="row row-content">
+            <div class="col">
+                <div id="carouselArtPreview" class="carousel slide" data-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active" data-bs-interval="1000">
+                            <img src="img/Bonnie.jpg" class="d-block w-100" alt="Nothing here yet">
+                        </div>
+                        <div class="carousel-item"  data-bs-interval="2000">
+                            <img src="img/Bonnie2.jpg" class="d-block w-100" alt="Nothing here yet">
+                        </div>
+                        <div class="carousel-item"  data-bs-interval="3000">
+                            <img src="img/Bonnie3.jpg" class="d-block w-100" alt="Nothing here yet">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Not adding any controls for now.  Dog pictures are just a place holder-->
+        </div>
+        <div class="row">
+            <div class="col">
+                <h2>Welcome</h2>
+            </div>
+        </div>
+        <div class="row row-content">
+            <div class="col">
+                <p>Some Info about amanda</p>
+            </div>
+        </div>
     </div>
     
     <!-- ****************Footer here with all your normal footer links*****************-->
