--- a/aboutUs.html
+++ b/aboutUs.html
@@ -15,10 +15,44 @@
     <!-- My css-->
     <link rel="stylesheet" href="css/styles.css">
 
-    <title>About Amanda Gallant</title>
+    <title>The KneeBar - About Us</title>
 </head>
 
 <body>
     
+    <header class="jumbotron jumbotron-fluid">
+        <div class="container">
+            <div class="row">
+                <div class="col-6">
+                    <h1>The KneeBar</h1>
+                    <h3>Only the best beta</h3>
+                </div>
+            </div>
+        </div>
+    </header>
+    <!--This will be links for the an eventual nav bar-->
+    <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
+        <div class="container">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#agNavbar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="agNavbar">
+                <ul class="navbar-nav">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="crags.html">Local Crags</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contactUs.html">Contact Us</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">About Us</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 </body>
 </html>
