--- a/crags.html
+++ b/crags.html
@@ -15,7 +15,7 @@
     <!-- My css-->
     <link rel="stylesheet" href="css/styles.css">
 
-    <title>The KneeBar - Contact Us</title>
+    <title>The KneeBar - Crags</title>
 </head>
 
 <body>
@@ -41,10 +41,10 @@
                         <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="crags.html">Local Crags</a>
+                        <a class="nav-link" href="#">Local Crags</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact Us</a>
+                        <a class="nav-link" href="contactUs.html">Contact Us</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="aboutUs.html">About Us</a>
