--- a/aboutUs.html
+++ b/aboutUs.html
@@ -23,7 +23,7 @@
     <header class="jumbotron jumbotron-fluid">
         <div class="container">
             <div class="row">
-                <div class="col-6">
+                <div class="col text-center">
                     <h1>The KneeBar</h1>
                     <h3>Only the best beta</h3>
                 </div>
@@ -38,7 +38,7 @@
             </button>
             <div class="collapse navbar-collapse" id="agNavbar">
                 <ul class="navbar-nav">
-                    <li class="nav-item active">
+                    <li class="nav-item">
                         <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
@@ -47,12 +47,50 @@
                     <li class="nav-item">
                         <a class="nav-link" href="contactUs.html">Contact Us</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item active">
                         <a class="nav-link" href="#">About Us</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
+        <!-- ****************Footer here with all your normal footer links*****************-->
+        <footer class="site-footer">
+            <!-- Internal Site Links here-->
+            <div class="container">
+                <div class="row">
+                    <div class="col-4 col-sm-2 offset-1">
+                        <h5>Links</h5>
+                        <ul class="list-unstyled">
+                            <li>
+                                <a href="#">Home</a>
+                            </li>
+                            <li>
+                                <a href="crags.html">Crags</a>
+                            </li>
+                            <li>
+                                <a href="contactUs.html">Contact Us</a>
+                            </li>
+                            <li>
+                                <a href="aboutUs.html">About Us</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <!-- ******************* Social Media Links Here ************************-->
+                    <!-- ******************* Need to add links still ************************-->
+                    <div class="col-6 col-sm-5 text-center">
+                        <a class="btn btn-social-icon btn-instagram" href=""><i class="fa fa-instagram"></i></a>
+                        <a class="btn btn-social-icon btn-facebook" href=""><i class="fa fa-facebook"></i></a>
+                        <a class="btn btn-social-icon btn-twitter" href=""><i class="fa fa-twitter"></i></a>
+                        <a class="btn btn-social-icon btn-youtube" href=""><i class="fa fa-youtube"></i></a>
+                    </div>
+                    <!-- ****************** General Contact Info ***************************-->
+                    <div class="col-sm4 text-center">
+                        <i class="fa fa-phone fa-lg"></i> <a href="tel:+1-609-280-8146">609-280-8146</a><br />
+                        <i class="fa fa-envelope fa-lg"></i> <a href="mailto:sean.t.mcnair@gmail.com">sean.t.mcnair@gmail.com</a>
+                    </div>
+                </div>
+            </div>
+        </footer>
 </body>
 </html>
