added pages fore each current location, cards in grid

--- a/contactUs.html
+++ b/contactUs.html
@@ -41,7 +41,7 @@
                         <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="crags.html">Local Crags</a>
+                        <a class="nav-link" href="crags.html">Crags</a>
                     </li>
                     <li class="nav-item active">
                         <a class="nav-link" href="#">Contact Us</a>
@@ -68,7 +68,7 @@
                                 <a href="crags.html">Crags</a>
                             </li>
                             <li>
-                                <a href="contactUs.html">Contact Us</a>
+                                <a href="#">Contact Us</a>
                             </li>
                             <li>
                                 <a href="aboutUs.html">About Us</a>
@@ -91,5 +91,9 @@
                 </div>
             </div>
         </footer>
+            <!-- jQuery must come first, then Popper.js, then the Bootstrap JavaScript plugins.-->
+    <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
+    <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
+    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
