--- a/crags.html
+++ b/crags.html
@@ -41,7 +41,7 @@
                         <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">Local Crags</a>
+                        <a class="nav-link" href="#">Crags</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="contactUs.html">Contact Us</a>
@@ -53,6 +53,15 @@
             </div>
         </div>
     </nav>
+    <div class="container">
+        <div class="row row-conent">
+            <div class="col">
+                <h3>Colorado</h3>
+
+            </div>
+        </div>
+    </div>
+
         <!-- ****************Footer here with all your normal footer links*****************-->
         <footer class="site-footer">
             <!-- Internal Site Links here-->
@@ -91,5 +100,9 @@
                 </div>
             </div>
         </footer>
+            <!-- jQuery must come first, then Popper.js, then the Bootstrap JavaScript plugins.-->
+    <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
+    <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
+    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
