--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         <a class="nav-link" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="crags.html">Local Crags</a>
+                        <a class="nav-link" href="crags.html">Crags</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link"href="contactUs.html">Contact Us</a>
@@ -85,37 +85,108 @@
         </div>
         <div class="row">
             <div class="col text-center">
-                <h2>Featured Crags</h2>
+                <h2><u><strong>Featured Crags</strong></u></h2>
             </div>
         </div>
-        <div class="row row-content justify-content-center">
-            <div class="col col-md-6 col-lg-4 p-2">
-                <div class="card text-center" style="width: 18rem;">
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-3 g-4">
+            
+            <div class="col pb-2">
+                <div class="card text-center bg-light border-dark" style="width: 18rem;">
+                    <img src="img/contRanch/continentalRanch.jpg" alt="Pecos River in Texas">
+                    <div class="card-body">
+                        <h5 class="card-title">Continental Ranch, TX</h5>
+                        <p class="card-text">Continental Ranch is a family owned ranch in Texas with about 200 routes along the Pecos River.</p>
+                        <a href="continentalRanch.html" class="btn btn-primary">Learn More</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col pb-2">
+                <div class="card text-center bg-light border-dark" style="width: 18rem;">
+                    <img src="img/morrison/morrisonOverview.jpg" alt="Looking out from Morrison Boulders">
+                    <div class="card-body">
+                        <h5 class="card-title">Morrison, CO</h5>
+                        <p class="card-text">Morrison, only a short drive from Denver and quality boldering with a quick approch.</p>
+                        <a href="morrison.html" class="btn btn-primary">Learn More</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col pb-2">
+                <div class="card text-center bg-light border-dark" style="width: 18rem;">
                     <img src="img/obed/obedRoofSunset.jpg" alt="Sunset hitting a roof in at Obed">
                     <div class="card-body">
                         <h5 class="card-title">Obed, TN</h5>
                         <p class="card-text">Obed and Clear Creek offers some fantasic climbing oppurtunities on bullet hard sandstone.</p>
-                        <a href="#" class="btn btn-primary">Learn More</a>
+                        <a href="obed.html" class="btn btn-primary">Learn More</a>
                     </div>
                 </div>
             </div>
-            <div class="col col-md-6 col-lg-4 p-2">
-                <div class="card text-center" style="width: 18rem;">
-                    <img src="img/contRanch/continentalRanch.jpg" alt="Pecos River in Texas">
+            <div class="col pb-2">
+                <div class="card text-center bg-light border-dark" style="width: 18rem;">
+                    <img src="img/obed/obedRoofSunset.jpg" alt="Sunset hitting a roof in at Obed">
                     <div class="card-body">
-                        <h5 class="card-title">Continental Ranch, TX</h5>
-                        <p class="card-text">Continental Ranch is a family owned ranch in Texas with about 200 routes along the Pecos River</p>
-                        <a href="#" class="btn btn-primary">Learn More</a>
+                        <h5 class="card-title">Obed, TN</h5>
+                        <p class="card-text">Obed and Clear Creek offers some fantasic climbing oppurtunities on bullet hard sandstone.</p>
+                        <a href="obed.html" class="btn btn-primary">Learn More</a>
                     </div>
                 </div>
             </div>
-            <div class="col col-md-6 col-lg-4 p-2">
-                <div class="card text-center" style="width: 18rem;">
-                    <img src="img/morrison/morrisonOverview.jpg" alt="Looking out from Morrison Boulders">
+            <div class="col pb-2">
+                <div class="card text-center bg-light border-dark" style="width: 18rem;">
+                    <img src="img/obed/obedRoofSunset.jpg" alt="Sunset hitting a roof in at Obed">
                     <div class="card-body">
-                        <h5 class="card-title">Morrison, CO</h5>
-                        <p class="card-text">Morrison, only a short drive from Denver offers a chance for some quality boldering with a quick approch and great views.</p>
-                        <a href="#" class="btn btn-primary">Learn More</a>
+                        <h5 class="card-title">Obed, TN</h5>
+                        <p class="card-text">Obed and Clear Creek offers some fantasic climbing oppurtunities on bullet hard sandstone.</p>
+                        <a href="obed.html" class="btn btn-primary">Learn More</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col pb-2">
+                <div class="card text-center bg-light border-dark" style="width: 18rem;">
+                    <img src="img/obed/obedRoofSunset.jpg" alt="Sunset hitting a roof in at Obed">
+                    <div class="card-body">
+                        <h5 class="card-title">Obed, TN</h5>
+                        <p class="card-text">Obed and Clear Creek offers some fantasic climbing oppurtunities on bullet hard sandstone.</p>
+                        <a href="obed.html" class="btn btn-primary">Learn More</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col pb-2">
+                <div class="card text-center bg-light border-dark" style="width: 18rem;">
+                    <img src="img/obed/obedRoofSunset.jpg" alt="Sunset hitting a roof in at Obed">
+                    <div class="card-body">
+                        <h5 class="card-title">Obed, TN</h5>
+                        <p class="card-text">Obed and Clear Creek offers some fantasic climbing oppurtunities on bullet hard sandstone.</p>
+                        <a href="obed.html" class="btn btn-primary">Learn More</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col pb-2">
+                <div class="card text-center bg-light border-dark" style="width: 18rem;">
+                    <img src="img/obed/obedRoofSunset.jpg" alt="Sunset hitting a roof in at Obed">
+                    <div class="card-body">
+                        <h5 class="card-title">Obed, TN</h5>
+                        <p class="card-text">Obed and Clear Creek offers some fantasic climbing oppurtunities on bullet hard sandstone.</p>
+                        <a href="obed.html" class="btn btn-primary">Learn More</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col pb-2">
+                <div class="card text-center bg-light border-dark" style="width: 18rem;">
+                    <img src="img/obed/obedRoofSunset.jpg" alt="Sunset hitting a roof in at Obed">
+                    <div class="card-body">
+                        <h5 class="card-title">Obed, TN</h5>
+                        <p class="card-text">Obed and Clear Creek offers some fantasic climbing oppurtunities on bullet hard sandstone.</p>
+                        <a href="obed.html" class="btn btn-primary">Learn More</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col pb-2">
+                <div class="card text-center bg-light border-dark" style="width: 18rem;">
+                    <img src="img/obed/obedRoofSunset.jpg" alt="Sunset hitting a roof in at Obed">
+                    <div class="card-body">
+                        <h5 class="card-title">Obed, TN</h5>
+                        <p class="card-text">Obed and Clear Creek offers some fantasic climbing oppurtunities on bullet hard sandstone.</p>
+                        <a href="obed.html" class="btn btn-primary">Learn More</a>
                     </div>
                 </div>
             </div>
