--- a/aboutUs.html
+++ b/aboutUs.html
@@ -42,7 +42,7 @@
                         <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="crags.html">Local Crags</a>
+                        <a class="nav-link" href="crags.html">Crags</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="contactUs.html">Contact Us</a>
@@ -63,7 +63,7 @@
                         <h5>Links</h5>
                         <ul class="list-unstyled">
                             <li>
-                                <a href="#">Home</a>
+                                <a href="index.html">Home</a>
                             </li>
                             <li>
                                 <a href="crags.html">Crags</a>
@@ -72,7 +72,7 @@
                                 <a href="contactUs.html">Contact Us</a>
                             </li>
                             <li>
-                                <a href="aboutUs.html">About Us</a>
+                                <a href="#">About Us</a>
                             </li>
                         </ul>
                     </div>
@@ -92,5 +92,9 @@
                 </div>
             </div>
         </footer>
+            <!-- jQuery must come first, then Popper.js, then the Bootstrap JavaScript plugins.-->
+    <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
+    <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
+    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
