fixed card alignment on xs/s screens

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -54,6 +54,13 @@
             </div>
         </div>
     </nav>
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                This is here
+            </div>
+        </div>
+    </div>
         <!-- ****************Footer here with all your normal footer links*****************-->
         <footer class="site-footer">
             <!-- Internal Site Links here-->
