Played with footer, reverted back to normal and building out the About Us page.

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -19,7 +19,6 @@
 </head>
 
 <body>
-    
     <header class="jumbotron jumbotron-fluid">
         <div class="container">
             <div class="row">
@@ -45,6 +44,9 @@
                         <a class="nav-link" href="crags.html">Crags</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="shop.html">Shop</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="contactUs.html">Contact Us</a>
                     </li>
                     <li class="nav-item active">
@@ -56,9 +58,19 @@
     </nav>
     <div class="container">
         <div class="row">
-            <div class="col">
-                This is here
+            <div class="col d-flex justify-content-center">
+                <h3><u>About Us</u></h3>
             </div>
+        </div>
+        <div class="row d-flex flex-row pb-2">
+            <div class="col d-flex justify-content-center">
+                <img class="img-thumbnail" width="200 px" src="img/seanSetUp.jpg" alt="Struggling through life" >
+            </div>
+        </div>
+        <div class="row mx-auto">
+            <p>That's me, Sean McNair, sitting atop my local Philadelphia crag thinking about lifes great questions, like how do I untie this knot.</p>
+            <p>Born in New Jersey, I got into climbing a bit late, but the bug bit me none the less, and now I try to get out whenever I can</p>
+            <p>I'm tracking all of my gumby knowledge here, so all can learn from my mistakes, and have the best times  </p>
         </div>
     </div>
         <!-- ****************Footer here with all your normal footer links*****************-->
@@ -74,6 +86,9 @@
                             </li>
                             <li>
                                 <a href="crags.html">Crags</a>
+                            </li>
+                            <li>
+                                <a href="shop.html">Shop</a>
                             </li>
                             <li>
                                 <a href="contactUs.html">Contact Us</a>
