--- a/contactUs.html
+++ b/contactUs.html
@@ -43,6 +43,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="crags.html">Crags</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="shop.html">Shop</a>
+                    </li>
                     <li class="nav-item active">
                         <a class="nav-link" href="#">Contact Us</a>
                     </li>
@@ -66,6 +69,9 @@
                             </li>
                             <li>
                                 <a href="crags.html">Crags</a>
+                            </li>
+                            <li>
+                                <a href="shop.html">Shop</a>
                             </li>
                             <li>
                                 <a href="#">Contact Us</a>
