--- a/index.html
+++ b/index.html
@@ -44,10 +44,13 @@
                         <a class="nav-link" href="crags.html">Crags</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link"href="contactUs.html">Contact Us</a>
+                        <a class="nav-link" href="shop.html">Shop</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link"href="aboutUs.html">About Us</a>
+                        <a class="nav-link" href="contactUs.html">Contact Us</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="aboutUs.html">About Us</a>
                     </li>
                 </ul>
             </div>
@@ -147,6 +150,9 @@
                         </li>
                         <li>
                             <a href="crags.html">Crags</a>
+                        </li>
+                        <li>
+                            <a href="shop.html">Shop</a>
                         </li>
                         <li>
                             <a href="contactUs.html">Contact Us</a>
