starting to build out the obed page

--- a/obed.html
+++ b/obed.html
@@ -55,7 +55,47 @@
     </nav>
 
     <div>
-        <h5>PLACEHOLDER</h5>
+        <div class="container pb-2">
+            <div class="row">
+                <div class="col">
+                    <h3>Obed, TN</h3>
+                </div>
+            </div>
+            <div class="row row-content">
+                <div class="col">
+                    <div id="carouselObed" class="carousel carousel-dark slide" data-ride="carousel">
+                        <div class="carousel-inner">
+                            <div class="carousel-item active" data-bs-interval="1000">
+                                <img src="img/obed/ryanRoof.jpg" class="d-block w-100" alt="Small roof climb">
+                            </div>
+                            <div class="carousel-item"  data-bs-interval="1000">
+                                <img src="img/obed/seanCorner.jpg" class="d-block w-100" alt="Corner Climb">
+                            </div>
+                            <div class="carousel-item"  data-bs-interval="1000">
+                                <img src="img/obed/ryanTarant.jpg" class="d-block w-100" alt="Fun Arete Climb">
+                            </div>
+                            <div class="carousel-item"  data-bs-interval="1000">
+                                <img src="img/obed/AmyKingsLib.jpg" class="d-block w-100" alt="Stephen King's Library">
+                            </div>
+                            <div class="carousel-item"  data-bs-interval="1000">
+                                <img src="img/obed/river (2).jpg" class="d-block w-100" alt="Obed River">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Add in controls-->
+            </div>
+            <div class="row row-content">
+                <div class="col-12 my-2">
+                    <h4><u>Where to Stay</u></h4>
+                    <p>Lily Pad Brewery has a great campground setup with the bonus of also being an awesome little brewery.  The cherry on top, the dogs.</p>
+                </div>
+                <div class="col-12">
+                    <h4><u>Where to Climb</u></h4>
+                    <p>Lily Pad Brewery has a great campground setup with the bonus of also being an awesome little brewery.  The cherry on top, the dogs.</p>
+                </div>
+            </div>
+        </div>
     </div>
 
     <!-- ****************Footer here with all your normal footer links*****************-->
